--- a/practice/basic template/style.css
+++ b/practice/basic template/style.css
@@ -1,3 +1,9 @@
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
 header {
   display: flex;
   justify-content: space-between;
@@ -26,7 +32,6 @@ nav ul {
 
 nav ul li {
   margin-right: 20px;
-  color: red;
 }
 
 nav ul li a {
@@ -41,23 +46,72 @@ nav ul li:hover {
 .dropdown-menu {
   display: none;
   position: absolute;
-  z-index: 1;
+  z-index: 999;
+  
+
+
+
 }
 
 .dropdown:hover .dropdown-menu {
   display: block;
+  margin: 5px;
+  padding: 30px;
+
+
+  width: 120px;
+
 }
 
 .dropdown-menu li {
   display: block;
+  background-color: black;
+  
+
 }
 
 .dropdown-menu li a {
-  color: #333;
+  color: #fdf8f8;
   text-decoration: none;
+
 }
 
 .dropdown-menu li:hover {
   background-color: #f68181;
   transition: background-color 0.3s ease-in-out;
+  align-items: center;
+  justify-content: center;
+
+ 
 }
+  /* BAnner*/
+  .banner {
+    position: relative;
+    max-width: 100%;
+    height: auto;
+    overflow: hidden;
+  }
+  
+  .banner img {
+    display: block;
+    width: 100%;
+    height: auto;
+  }
+  
+  .center {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  
+  .center a {
+    display: inline-block;
+    margin: 0 10px;
+    padding: 10px;
+    background-color: #fff;
+    color: #333;
+    font-size: 14px;
+    text-decoration: none;
+    border-radius: 5px;
+  }
