--- a/practice/basic template/style.css
+++ b/practice/basic template/style.css
@@ -137,3 +137,37 @@ nav ul li:hover {
 }
 
 .content p {}
+
+
+
+
+/* Footer */
+footer {
+  background-color: #eee;
+  border-top: 1px solid #ccc;
+  padding: 20px;
+}
+
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+}
+
+footer p {
+  margin: 0;
+}
+
+footer ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+footer ul li {
+  display: inline-block;
+  margin-right: 20px;
+}
+
+footer ul li:last-child {
+  margin-right: 0;
+}
